# aocoracle

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  constraints.txt  init_env.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  deploy_cratesio.yml  deploy_ghpages.yml  integrate.yml  rust.yml  static.yml
crates/aocdata/: Cargo.toml
crates/aocoracle/: Cargo.toml
crates/webapp/: Cargo.toml  index.html  manifest.json
crates/webapp/src/: textarea.rs  webapp.rs
day/20/: input.txt
day/21/: input.txt
day/23/: input.txt
day/24/: input.txt
day/25/: input.txt
day/4/: input.txt
day/5/: input.txt
day/6/: input.txt
day/7/: input.txt
docs/: index-22fe715c1d282e0f.css  index.html  webapp-804a078ae2b5e97b_bg.wasm  webapp-84249c440a1c8481.js  webapp-84249c440a1c8481_bg.wasm  webapp-b3d36c5978260ece.js  webapp-b3d36c5978260ece_bg.wasm  webapp-b8a98af0534e739a.js  webapp-b8a98af0534e739a_bg.wasm  webapp-c3993556daebd684.js  webapp-c3993556daebd684_bg.wasm  webapp-d11cfbdd46749542.js  webapp-d11cfbdd46749542_bg.wasm  webapp-e4a6f674eb4093c2.js  webapp-e4a6f674eb4093c2_bg.wasm  webapp-ed16bb11e9b87185.js  webapp-ed16bb11e9b87185_bg.wasm
inputs/01/: input.txt
inputs/02/: input.txt
inputs/03/: input.txt
inputs/08/: input.txt
inputs/09/: input.txt
inputs/10/: input.txt
inputs/11/: input.txt
inputs/12/: input.txt
inputs/13/: input.txt
src/: aoc.rs  aoclib.rs  day_02.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_1.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  testing.rs  y2021.rs  y20d01.rs  y20d02.rs
(+91 files in other folders)
