[package]
name = "aocoracle"
version = "0.1.1"
edition = "2021"
description = "Universal solver for advent of code problems"
license = "MIT"
exclude = [".*","inputs/"]

[dependencies]
clap = "2.33.3"
hashbrown = "0.11.2"
itertools = "0.10.0"
regex = "1.4.5"
structopt = "0.3.21"

[lib]
name = "aoclib"
path = "src/aoclib.rs"

[[bin]]
name = "aocoracle"
path = "src/aoc.rs"
