[package]
name = "aocoracle-webapp"
version = "0.1.0"
edition = "2021"
description = "Universal solver for advent of code problems"
license = "MIT"
exclude = [".*"]

[dependencies]
aocoracle = { path = "../aocoracle" }
log = "0.4.14"
yew = "0.19"
wasm-logger = "0.2.0"
wasm-bindgen = "~0.2.82"
web-sys = "0.3.60"

[[bin]]
name = "webapp"
path = "src/webapp.rs"
